[gd_scene load_steps=5 format=3 uid="uid://c6tae2tdspbmf"]

[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://themes/list_item_panel/list_item_panel_theme.tres" id="1_bw5gx"]
[ext_resource type="Script" path="res://scripts/menus/stats_panel/move_list_panel/move_effect_details_panel.gd" id="2_dfdal"]
[ext_resource type="Resource" uid="uid://sdnbjpunsbc0" path="res://gamedata/story_requirements/surge_move_reqs.tres" id="3_s37o1"]
[ext_resource type="Theme" uid="uid://d2qqyhri84552" path="res://themes/nested_ui/larger_text_panel_theme.tres" id="3_up556"]

[node name="MoveEffectDetailsPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_bw5gx")
script = ExtResource("2_dfdal")
surgeRequirements = ExtResource("3_s37o1")

[node name="DetailsTitle" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 6.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("3_up556")
bbcode_enabled = true
text = "[center]Charge Effect (-10 Orbs Min.)[/center]"
fit_content = true

[node name="MoveTargets" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_top = 44.0
offset_right = 220.0
offset_bottom = 78.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Targets All Combatants (Except Self)[/center]"
fit_content = true

[node name="MovePower" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 70.0
offset_right = 150.0
offset_bottom = 96.0
text = "100 Power"
fit_content = true

[node name="MoveRole" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 70.0
offset_right = -24.0
offset_bottom = 96.0
grow_horizontal = 0
bbcode_enabled = true
text = "[right]Single Target[/right]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 109.0
offset_bottom = 311.0
grow_horizontal = 2
theme_override_constants/separation = 16

[node name="UserStatChanges" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "[center]User Boosts Self:
+900% Phys Atk, +900% Magic Atk, +900% Resistance, +900% Affinity, and +900% Speed[/center]"
fit_content = true

[node name="TargetStatChanges" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "[center]User Boosts Target(s):
+900% Phys Atk, +900% Magic Atk, +900% Resistance, +900% Affinity, and +900% Speed[/center]"
fit_content = true

[node name="MoveStatusEffect" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Applies Overwhelming Exhaustion (100% Chance)[/center]"
fit_content = true

[node name="SurgeChangesDescription" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Surge Changes | Per Extra Orb Spent:
Line 1
Line 2
Line 3
Line 4
Line 5
Line 6
Line 7[/center]"
fit_content = true
